# dirtabase

./: .envrc  .gitignore  Cargo.toml  README.md  build.rs  default.nix  devenv.nix  flake.nix
ark/: Cargo.toml
ark/src/: lib.rs
ark/src/traits/: entries.rs  import.rs  mod.rs  read.rs  save.rs  scan.rs  translate.rs  write.rs
ark/src/types/: ark.rs  attrs.rs  contents.rs  db.rs  digest.rs  ipr.rs  mod.rs
builder/: Cargo.toml
builder/src/: behavior.rs  cli.rs  context.rs  doc.rs  lib.rs  logger.rs  main.rs  op.rs  prelude.rs
engines/: Cargo.toml
engines/src/: lib.rs  memory.rs  simple.rs  storage.rs
examples/: ark.rs  giana.rs  lua.desktop  lua.rs
fixture/: file_at_root.txt
fixture/dir1/dir2/: nested.txt
src/: archive.rs  ark.rs  attr.rs  behavior.rs  cli.rs  context.rs  digest.rs  dir.rs  doc.rs  enc.rs  label.rs  lib.rs  logger.rs  main.rs  memstore.rs  op.rs  prelude.rs  resource.rs  storage.rs  test_tools.rs  traits.rs
src/archive/: api.rs  core.rs  mod.rs  normalize.rs  stream.rs
src/ark/: entries.rs  fs.rs  import.rs  mod.rs  save.rs  types.rs
src/op/: cmd.rs  ctx.rs  gen.rs  helpers.rs  mod.rs  ops.rs  parse.rs  test_helpers.rs
src/op/ops/: cmd_impure.rs  download.rs  download_impure.rs  empty.rs  export.rs  filter.rs  import.rs  merge.rs  prefix.rs  prelude.rs  replace.rs
src/storage/: core.rs  mod.rs  simple.rs  traits.rs
src/stream/: archive.rs  core.rs  debug.rs  mod.rs  osdir.rs
types/: Cargo.toml
types/src/: archive.rs  digest.rs  lib.rs  primitives.rs  resource.rs  rootdata.rs  storage.rs  stream.rs
