[package]
name = "dirtabase"
version = "0.1.0"
edition = "2021"

[profile.profiling]
inherits = "release"
debug = true

[dependencies]
hex = "0.4.3"
serde = { version="1.0.204", features=["derive"] }
serde_json = "1.0.120"
sha2 = "0.10.8"
generic-array = "1.1.0"
indoc = "2.0.5"
tempfile = "3.10.1"
regex = "1.10.6"
reqwest = { version="0.12.5", features=["blocking"] }
url = "2.5.2"
rand = "0.8.5"
memmap = "0.7.0"

[build-dependencies]
regex = "1.10.6"
