[package]
name = "dirtabase"
version = "0.1.0"
edition = "2021"

[profile.profiling]
inherits = "release"
debug = true

[dependencies]
arkive = "=0.8.13-1"
hex = "0.4.3"
reqwest = { version = "0.12.5", features = ["blocking"] }
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.125"
strum = "0.26.3"
strum_macros = "0.26.4"
tempfile = "3.12.0"

[dev-dependencies]
indoc = "2.0.5"
tempfile = "3.12.0"
rusty-fork = "0.3.0"
