[package]
name = "ark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
lazy-regex = "3.2.0"
memmap = "0.7.0"
serde = { version="1.0.207", features=["derive","rc"] }
serde_json = "1.0.124"
sha2 = "0.10.8"
tempfile = "3.12.0"
