[package]
name = "builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark = { path = "../ark" }
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.125"
strum = "0.26.3"
strum_macros = "0.26.4"

[dev-dependencies]
indoc = "2.0.5"
tempfile = "3.12.0"
rusty-fork = "0.3.0"
